# NuI

./: .gitignore  .gitmodules  .iwyu_override.imp  .lgtm.yml  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  README.md  _clang-format
.github/workflows/: codeql.yml  intel.yml  linux.yml
jimsrgpr/core/index/: CMakeLists.txt  index.cc  index.h  macro.cc  macro.h  macro_test.cc
lib/: CMakeLists.txt
nui/: CMakeLists.txt
nui/core/: CMakeLists.txt
nui/core/basics/: CMakeLists.txt  basics.cc  basics.h  vector_tricks.cc  vector_tricks.h  version.cc  version.h
nui/core/index/: CMakeLists.txt  index.cc  index.h  macro.cc  macro.h  macro_test.cc
nui/core/indexing/: CMakeLists.txt  conversion.cc  conversion.h  conversion_test.cc  indexing.cc  indexing.h  macro.cc  macro.h  macro_test.cc  range.cc  range.h  range_test.cc
nui/core/memory/: CMakeLists.txt
nui/info/: CMakeLists.txt
nui/info/checks/: CMakeLists.txt
nui/info/logging/: CMakeLists.txt
nui/info/memory_load/: CMakeLists.txt
nui/info/profiling/: CMakeLists.txt
nui/info/runtime/: CMakeLists.txt
nui/info/version/: CMakeLists.txt
nui/parallelism/: CMakeLists.txt
nui/physics/: CMakeLists.txt
nui/physics/coupling/: CMakeLists.txt
nui/physics/model_space/: CMakeLists.txt
nui/physics/model_space/1b/: CMakeLists.txt
nui/physics/model_space/2b/: CMakeLists.txt
nui/physics/model_space/3b/: CMakeLists.txt
nui/physics/model_space/sp/: CMakeLists.txt
nui/physics/operators/: CMakeLists.txt
nui/physics/operators/actions/: CMakeLists.txt
nui/physics/operators/actions/1b/: CMakeLists.txt
nui/physics/operators/actions/2b/: CMakeLists.txt
nui/physics/operators/actions/3b/: CMakeLists.txt
nui/physics/operators/actions/full/: CMakeLists.txt
nui/physics/operators/storage/: CMakeLists.txt
nui/physics/operators/storage/1b/: CMakeLists.txt
nui/physics/operators/storage/2b/: CMakeLists.txt
nui/physics/operators/storage/3b/: CMakeLists.txt
nui/physics/operators/storage/full/: CMakeLists.txt
nui/physics/operators/storage/shared/: CMakeLists.txt
nui/physics/quantum_numbers/: CMakeLists.txt
nui/tensor/: CMakeLists.txt
nui/tensor/contraction/: CMakeLists.txt
nui/tensor/storage/: CMakeLists.txt
scripts/: apply_basics.py
